<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_prov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/mregular"
        android:text="@string/dki_jakarta" />

    <androidx.cardview.widget.CardView
        android:id="@+id/c1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_positif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/positif" />

                <TextView
                    android:id="@+id/txt_positif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/_143000"
                    android:textColor="#FB8C00"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_positif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mregular"
                    android:text="@string/positif"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sembuh" />

                <TextView
                    android:id="@+id/txt_sembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/_103000"
                    android:textColor="#00BE76"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_sembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mregular"
                    android:text="@string/sembuh"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_meninggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/meninggal" />

                <TextView
                    android:id="@+id/txt_meninggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/_6450"
                    android:textColor="#00BE76"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/label_meninggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mregular"
                    android:text="@string/meninggal"
                    android:textSize="14sp" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>