<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:fitsSystemWindows="true"
    tools:context=".ui.cases.CaseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="227dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="8dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_peduli"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="34dp"
                    android:contentDescription="@string/peduli_covid"
                    android:src="@drawable/pedulicovid" />

                <TextView
                    android:id="@+id/txt_peduli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_toEndOf="@id/img_peduli"
                    android:fontFamily="@font/mbold"
                    android:text="@string/peduli_covid"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/img_covid19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/peduli_covid"
                    android:src="@drawable/covid" />

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_view">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_spinner"
                android:entries="@array/country"
                android:paddingStart="40dp"
                android:paddingEnd="16dp" />

            <TextView
                android:id="@+id/label_kasus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/mregular"
                android:text="@string/update_kasus"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lihat_semua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spinner"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/mregular"
                android:text="@string/lihat_semua"
                android:textSize="12sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward" />

            <androidx.cardview.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/label_kasus"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="18dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_positif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/positif" />

                        <TextView
                            android:id="@+id/txt_positif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mbold"
                            android:text="@string/loading"
                            android:textColor="#FB8C00"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/label_positif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/positif"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_sembuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/sembuh" />

                        <TextView
                            android:id="@+id/txt_sembuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mbold"
                            android:text="@string/loading"
                            android:textColor="#00BE76"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/label_sembuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/sembuh"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_meninggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/meninggal" />

                        <TextView
                            android:id="@+id/txt_meninggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mbold"
                            android:text="@string/loading"
                            android:textColor="#00BE76"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/label_meninggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/mregular"
                            android:text="@string/meninggal"
                            android:textSize="14sp" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/label_peta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/c1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mregular"
                android:text="@string/peta_persebaran"
                android:textSize="16sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/peta"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_below="@id/label_peta"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="18dp">

                <ImageView
                    android:id="@+id/peta_persebaran"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/peta_persebaran"
                    android:scaleType="centerCrop"
                    android:src="@drawable/petasebaran" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>