<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:fitsSystemWindows="true"
    tools:context=".ui.cases.CaseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="227dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:padding="8dp"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_cegah"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="34dp"
                    android:contentDescription="@string/peduli_covid"
                    android:src="@drawable/cegahcovid" />

                <TextView
                    android:id="@+id/txt_cegah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="80dp"
                    android:layout_toEndOf="@id/img_cegah"
                    android:fontFamily="@font/mbold"
                    android:text="@string/cegah"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/img_covid19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/peduli_covid"
                    android:src="@drawable/covid" />

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_view">

            <androidx.cardview.widget.CardView
                android:id="@+id/c1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/anim1"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="02.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@id/anim1"
                        android:fontFamily="@font/mregular"
                        android:text="@string/cegah1" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/c1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/anim2"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="01.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@id/anim2"
                        android:fontFamily="@font/mregular"
                        android:text="@string/cegah2" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/c3"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/c2"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/anim3"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="05.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@id/anim3"
                        android:fontFamily="@font/mregular"
                        android:text="@string/cegah3" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/rs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/c3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/mregular"
                android:text="@string/rs_rujukan" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_rs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rs_label"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/hospital" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>